20% is completed